Looking around. Salvagable?
Trying to decide whether to salvage this code or not.
Might be easier to rewrite most of it.